--- a/SIMD/src/SIMD/SIMD.vcxproj.filters
+++ b/SIMD/src/SIMD/SIMD.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="소스 파일\Ch.05">
       <UniqueIdentifier>{d1f6d09c-a6f9-4c16-b603-351c5c3c599b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Ch.06">
+      <UniqueIdentifier>{f4651f49-44ba-4034-b74d-a4cf3a9ef034}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Ch.01\01_mov.cpp">
@@ -279,11 +282,38 @@
     <ClCompile Include="..\Ch.05\11_shuffle_unpack.cpp">
       <Filter>소스 파일\Ch.05</Filter>
     </ClCompile>
-    <ClCompile Include="12_cache.cpp">
+    <ClCompile Include="..\Ch.05\12_cache.cpp">
       <Filter>소스 파일\Ch.05</Filter>
     </ClCompile>
-    <ClCompile Include="13_improve_matrix_multiply.cpp">
+    <ClCompile Include="..\Ch.05\13_improve_matrix_multiply.cpp">
       <Filter>소스 파일\Ch.05</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\01_overview.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\02_read_write.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\03_arithmatic.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\04_set.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\05_logical_ops.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\06_cmp.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Ch.06\07_casting.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="08_cache.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
+    </ClCompile>
+    <ClCompile Include="09_Factorial.cpp">
+      <Filter>소스 파일\Ch.06</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
